<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    tools:context="Avataryug.Example.QuickTest.ExampleAuthentication">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/AuthBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:layout_weight="1"
        android:contentDescription="BaclButton"
        android:background="@color/black"
        android:backgroundTint="@color/white"
        android:clickable="true"
        app:borderWidth="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_new_24" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="5dp"
        android:text="Authentication"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toEndOf="@+id/AuthBackButton"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <Button
            android:id="@+id/CustomIDBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:backgroundTint="#E8E6E6"
            android:text="@string/login_with_customid"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:cornerRadius="5dp" />

        <Button
            android:id="@+id/AndroidIDBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:backgroundTint="#E8E6E6"
            android:text="@string/login_with_android_id"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:cornerRadius="5dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/newAccountBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:backgroundTint="#E8E6E6"
            android:textColor="@color/black"
            android:text="@string/create_new_accounts"
            android:textAllCaps="true"
            android:textSize="10sp"
            app:cornerRadius="5dp" />

        <Button
            android:id="@+id/loginEmailBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:backgroundTint="#E8E6E6"
            android:textColor="@color/black"
            android:text="@string/login_with_email"
            android:textAllCaps="true"
            android:textSize="10sp"
            app:cornerRadius="5dp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:id="@+id/LoginwithAppleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:backgroundTint="#E8E6E6"
            android:textColor="@color/black"
            android:text="@string/login_with_apple"
            android:textAllCaps="true"
            android:textSize="10sp"
            app:cornerRadius="5dp" />

        <Button
            android:id="@+id/IOSDeviceIDBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:backgroundTint="#E8E6E6"
            android:textColor="@color/black"
            android:text="@string/login_with_ios_device_id"
            android:textAllCaps="true"
            android:textSize="10sp"
            app:cornerRadius="5dp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <Button
            android:id="@+id/SignINBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:backgroundTint="#E8E6E6"
            android:textColor="@color/black"
            android:text="@string/login_with_google"
            android:textAllCaps="true"
            android:textSize="10sp"
            app:cornerRadius="5dp" />

        <Button
            android:id="@+id/LoginFacebookBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:backgroundTint="#E8E6E6"
            android:textColor="@color/black"
            android:text="@string/login_with_facebook"
            android:textAllCaps="true"
            android:textSize="10sp"
            app:cornerRadius="5dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>